--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 <html>
 {% include "./tpl/head.html" %}
 
-<body class="pageIndex dark-mode">
+<body class="pageIndex">
   <div class="wrap">
       <!---->
         <noindex><a rel="nofollow" href="/ru/go?to=gg" class="abr-mob" target="_blank">
