--- a/src/match_past.html
+++ b/src/match_past.html
@@ -189,10 +189,9 @@
                       <canvas id="myChart" width="400" height="100"></canvas>
                     </div>
 
-                    <div class="alert alert-sm text-center" role="alert">
-                      <i class="fa fa-exclamation-triangle"></i>
-                      Данные в графике примерные, точные данные появятся после обработки реплея матча
-                    </div>
+                    <div class="alert alert-sm text-center" role="alert"><i class="fa fa-exclamation-triangle" style="color:red"></i> Данные в графике поступают без задержки и опережают время на стримах</div>
+                    <div class="alert alert-sm text-center" role="alert"><i class="fa fa-exclamation-triangle"></i> Данные в графике примерные, точные данные появятся после обработки реплея матча</div>
+                    <div class="alert alert-sm text-center" role="alert"><i class="fa fa-exclamation-triangle" style="color:red"></i> Статистика игроков поступает с задержкой и примерно соответствует времени на стримах (<span class="scd" data-format="1" data-value="2119">35 мин 19 сек</span>)</div>
 
                     <div class="reztable table-responsive">
                       <table class="table table-striped table-sm table-hover">
