--- a/reg.html
+++ b/reg.html
@@ -87,14 +87,14 @@
 
                                             <h1
                                                     style="margin: 30px 40px 30px;font: 20px/26px Roboto,Helvetica,Arial,sans-serif;text-align:center;">
-                                            Ты вступил в
+                                            Ты попал в
                                             уникальное
                                             гейм комьюнити <span
                                                 style="color: rgb(127 174 195);">Escorenews.com</span>!</h1>
                                             <p
                                                 style="text-align:center;margin:20px 20px 20px;font: 300 16px/21px Roboto,Helvetica,Arial,sans-serif;">
                                                 Для завершения регистрации
-                                                остался всего один шаг
+                                                необходимо подтвердить e-mail
                                             <p>
                                                 <a href="" 
                                                     class="but-w"
