--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="/dist/app.css">
+        <link rel="stylesheet" href="./dist/app.css">
         <title>ESN</title>
     </head>
     <body>
-        <script src="/dist/app.js"></script>
+        <script src="./dist/app.js"></script>
     </body>
 </html>
