--- a/src/media_kit.html
+++ b/src/media_kit.html
@@ -35,10 +35,10 @@
                     <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2F0WJjGO2ZcYrCtQRfrAqEL1%2FESN-Mediakit-logo%3Ftype%3Ddesign%26node-id%3D939%253A877%26mode%3Ddesign%26t%3D1Ph4jfgBrcPOkU9N-1" allowfullscreen></iframe>
                 </div>
 
-                <div class="text">
+                <!-- <div class="text">
                   <h3>About our project</h2>
                   <p >Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-                </div>
+                </div> -->
 
                 <div class="text">
                   <h3>Terms of Use</h3>
